# pe-org-air-cs5

./: .gitignore  README.md
Prototyping/: pyproject.toml  test_mcp_server.py  test_portfolio.py  update_codelabs.py
Prototyping/Glassdoor review analysis/: analyze_reviews.py  duckdb_analysis.py  explore_data.py  extract_reviews.py  extract_reviews_strict.py  fast_analysis.py  final_analysis.py  id_based_analysis.py  refined_id_analysis.py
Prototyping/Integration_testing/: db_client.py  prototype_board_fix.py  run_pipeline.py  run_real_pipeline.py  scoring_engine.py
Prototyping/RAG_testing/: rag_simulation.py  snowflake_loader.py
Prototyping/SEC-Edgar/: html_extract.py  pdf_extract.py  pyproject.toml
Prototyping/Score Enhancements/: audit_company_scores.py  cleanup_assessments.py  deduplicate.py  fetch_real_data.py  fix_metadata.py  run_fix_pipeline.py  simulate_bases.py  simulate_scores.py  test_enhanced_pf.py  test_enhanced_rubric.py  test_real_enhancements.py
Prototyping/Signals/: batch_orchestrator.py  batch_patent_run.py  batch_processor_v2.py  batch_run.py  batch_run_v2.py  builtwith_debug.txt  compare_pipelines.py  demo_v2_to_sql.py  detailed_signals_v2.json  job_pipeline.py  leadership_pipeline.py  master_pipeline.py  models.py  patent_pipeline.py  patent_pipeline_v2.py  patent_pipeline_v3.py  pyproject.toml  run_v2_pipeline.py  stealth_scraper.py  summary_results_v2.json  tech_stack_pipeline.py  test_tech_v2.py  test_v2_patent.py
Prototyping/TalentAnalyzerPOC/: deep_analysis.py  run_analysis.py  snowflake_client.py  talent_analyzer_v2.py  verify.py
Prototyping/airflow_implementation_validation/: list_filings.py  test_integration_logic_manual.py  verify_airflow_status.py  verify_integration_dag_load.py
Prototyping/chroma_db/: chroma.sqlite3
Prototyping/cs5_diagnostics/: arch.py  diagnose.py
Prototyping/glassdoor_pipeline_validation/: README.md  run_glassdoor_batch.py  run_glassdoor_batch_150.py  setup_glassdoor_tables.py  verify_glassdoor_pipeline.py
Prototyping/hiring_debug/: check_job_details.py  check_snowflake_counts.py  create_dummy_jobs.py  debug_dg_ge.py  hiring_collector_standalone.py  manual_fetch_validation.py  test_batch_hiring.py  test_jpm_digital_presence.py  test_jpm_hiring.py  test_jpm_tech_stack.py  test_leadership_logic.py  test_wmt_queries.py  verify_leadership.py
Prototyping/leadership_debug/: create_leadership_jobs.py  test_leadership_prototype.py
Prototyping/scoring_poc/: board_analyzer.py  evidence_mapper.py  final_calculators.py  market_analyzer.py  master_test.py  master_verify.py  position_calculator.py  snowflake_client.py  talent_analyzer.py  test_analyzers.py  test_board_analyzer.py  test_board_analyzer_integration.py  test_mapper.py  test_position_calculator.py  verify_with_snowflake.py
pe-org-air-platform/: .coveragerc  .env.example  README.md  debug_data.py  pyproject.toml  requirements-airflow.txt  requirements-app.txt  requirements.txt  run_integration.py
pe-org-air-platform/app/: config.py  logging_conf.py  main.py
pe-org-air-platform/chroma_data/: chroma.sqlite3
pe-org-air-platform/dags/: evidence_indexing_dag.py  integration_pipeline_dag.py  sec_backfill_dag.py  sec_ingestion_dag.py  sec_monitor_dag.py
pe-org-air-platform/docker/: Dockerfile  Dockerfile.airflow  Dockerfile.app  docker-compose.yml  nginx.conf
pe-org-air-platform/docs/: Architecture_Diagram_CS5.excalidraw  Case_Study_5_CDDoc.docx  ic_memo_c017026e-ab4b-451c-a1a9-e80fd4de0794.docx  lp_letter_c017026e-ab4b-451c-a1a9-e80fd4de0794.docx
pe-org-air-platform/exercises/: agentic_due_diligence.py  complete_pipeline.py
pe-org-air-platform/frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
pe-org-air-platform/tests/: conftest.py  test_analyst_notes.py  test_api.py  test_assessment_history.py  test_assessments_router.py  test_backfill_mock.py  test_concurrency.py  test_coverage_expansion.py  test_cs3_calculators.py  test_dimension_mapper.py  test_flows.py  test_models.py  (+18 more)
(+132 files in other folders)
